# yateto

./: .clang-format  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  elastic.py  matrices_4.xml  matrices_56.xml  name.txt  setup.py  spacetime.py
.github/workflows/: pre-commit.yml  yateto-ci.yml  yateto-cpu.yml  yateto-pytest.yml
docs/: Makefile  README.md  requirements.txt  tensor-ir.rst  undoc_stats.py
docs/source/: conf.py  index.rst  modules.rst  yateto.ast.rst  yateto.codegen.copyscaleadd.rst  yateto.codegen.gemm.rst  yateto.codegen.indexsum.rst  yateto.codegen.log.rst  yateto.codegen.product.rst  yateto.codegen.rst  yateto.controlflow.rst  yateto.rst
examples/: SConstruct  example.py  hosvd.py  matmul.py  minimal.py  optimal_ind.py  seissol_eqspp.py  seissol_matrices.xml  slicing.py  springer.py  stock.py  tce.py
examples/common/: Stopwatch.h  Util.h
examples/site_scons/: arch.py
examples/site_scons/site_tools/: cxxtest.py
include/: yateto.h
include/yateto/: CopyPolicy.h  HeapManager.h  InitTools.h  LinearAllocator.h  MatrixView.h  Misc.h  TensorView.h  Type.h
tests/: CMakeLists.txt  Dockerfile  Dockerfile-env  Dockerfile-setup  Jenkinsfile  README.md  SConstruct  TensorView.t.h  generator.py  site_scons  spack.yaml
tests/code-gen/: CMakeLists.txt  bugfixing.py  conditional.py  datatype.py  elementwise.py  expression.py  generator.py  indices.py  minimal.py  reduction.py  regress.py  slicing.py  sparsity.py  stock.py  tce.py
tests/code-gen/cmake/: FindLIBXSMM.cmake  FindLibxsmm_executable.cmake
tests/interface/: CMakeLists.txt  TensorView.t.h  site_scons
tests/internals/: log_node.py
tests/pytest/: conftest.py  test_aspp.py  test_ast_node.py  test_ast_transformer.py  test_ast_visitor.py  test_bandwidth.py  test_controlflow.py  test_cost.py  test_generator.py  test_import.py  test_indices.py  test_memory.py  test_opt.py  test_pipeline.py  test_regress_flops.py  test_sparse.py  test_type.py
yateto/: __init__.py  arch.py  aspp.py  functions.py  gemm_configuration.py  generator.py  input.py  memory.py  metagen.py  ops.py  tensor.py  type.py  util.py
yateto/ast/: cost.py  indices.py  log.py  node.py  opt.py  tools.py  transform.py  transformer.py  visitor.py
yateto/codegen/: arch.py  cache.py  code.py  common.py  factory.py  gpukernel.py  test_framework.py  tiny_tensor_language.py  visitor.py
yateto/codegen/copyscaleadd/: csa_gen.py  factory.py  generic.py  tinytc.py
yateto/codegen/elementwise/: factory.py  generic.py
yateto/codegen/fused_gemms/: external_generator.py  factory.py  libsmm.py  tinytc.py
yateto/codegen/gemm/: factory.py  gemmgen.py  generic.py  libxsmm.py
yateto/codegen/indexsum/: factory.py  generic.py
yateto/codegen/log/: factory.py  generic.py
yateto/codegen/product/: factory.py  generic.py
yateto/codegen/reduction/: __init__.py  factory.py  generic.py
yateto/controlflow/: graph.py  transformer.py  visitor.py
yateto/controlflow/fused_gemm_automata/: __init__.py  automata.py
yateto/tensorop/: node.py  tools.py
